--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -76,12 +76,12 @@
   z-index: 1;
   transform: translate(-50%, -50%);
 }
-#product-carousel-scroll::-webkit-scrollbar{
+.custom-horizontal-scroll::-webkit-scrollbar{
   height: 8px;
   background-color: #E8ECEF;
   border-radius: 15px;
 }
-#product-carousel-scroll::-webkit-scrollbar-thumb{
+.custom-horizontal-scroll::-webkit-scrollbar-thumb{
   width: 30%;
   background-color: black;
   border-radius: 15px;
